// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot for danger 1`] = `
<DocumentFragment>
  <div
    class="alert alert-danger"
    role="alert"
  >
    <p
      class="mb-0 small"
    >
      Danger everywhere
    </p>
    <p
      class="mb-0 small"
    >
      But go to see it through ma boi!
    </p>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot for success 1`] = `
<DocumentFragment>
  <div
    class="alert alert-success"
    role="alert"
  >
    <p
      class="mb-0 small"
    >
      Everythang good over here boi!
    </p>
    <p
      class="mb-0 small"
    >
      Thumbs up ma boi!
    </p>
  </div>
</DocumentFragment>
`;
